--- a/style.css
+++ b/style.css
@@ -2,18 +2,20 @@ body{
     background-color: #1a75bc;
 }
 
+#alert{
+    color:#ffffff;
+    text-align: left;
+}
+
 .login-form{
     width: 325px;
-    
     padding: 20% 0 0;
     margin:auto;
 }
 
 .form{
-    
     position:relative;
     z-index:1;
-    text-align: right;
 }
 
 .form input{
@@ -33,6 +35,7 @@ img{
     padding-bottom: 10px;
 }
 
+
 .form button{
     font-family : "Roboto", sans-serif;
     text-transform : uppercase;
@@ -41,7 +44,7 @@ img{
     border: 0;
     width: 100%;
     padding: 15px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .form .message {
